# anachro-forth

./: .gitmodules  Cargo.toml  README.md
core/: Cargo.toml
core/src/: builtins.rs  compiler.rs  lib.rs  nostd_rt.rs  ser_de.rs  std_rt.rs  tokendict.rs
emb-playground/: Cargo.toml
emb-playground/src/: lib.rs
emb-playground/testsuite/: Cargo.toml
emb-playground/testsuite/src/: lib.rs
emb-playground/testsuite/tests/: test.rs
host/: Cargo.toml  README.md
host/forth-examples/: .gitignore  star.fth
host/forth-examples/aoc-2021/: 12-01-pt1.fth  12-01-pt2.fth
host/notes/: thoughts.md
host/src/: builtins.rs  lib.rs  main.rs
host/tests/: smoke.rs
src/: builtins.rs  lib.rs  main.rs
tests/: smoke.rs
