[package]
name = "anachro-forth-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.8"

[dependencies.postcard]
version = "0.7.2"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
default-features = false

[dev-dependencies.postcard]
version = "0.7.2"
features = ["use-std"]

[dev-dependencies.serde]
version = "1.0.130"
features = ["derive", "std"]
default-features = false

[features]
std = ["serde/std"]
default = []
