[package]
name = "anachro-forth-core"
version = "0.0.2"
edition = "2021"
description = "A forth-inspired, bytecode-compiled scripting language for Anachro Powerbus"
repository = "https://github.com/anachro-rs/anachro-forth"
authors = ["James Munns <james@onevariable.com>"]
readme = "../README.md"
categories = [
    "embedded",
    "no-std",
]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.8"

[dependencies.postcard]
version = "0.7.2"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
default-features = false

[dev-dependencies.postcard]
version = "0.7.2"
features = ["use-std"]

[dev-dependencies.serde]
version = "1.0.130"
features = ["derive", "std"]
default-features = false

[features]
std = ["serde/std"]
default = []

[package.metadata.docs.rs]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
