[package]
name = "anachro-forth-host"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.16.0"
termion = "1.5.6"

[dependencies.anachro-forth-core]
path = "../core"

[dependencies.postcard]
version = "0.7.2"
features = ["use-std"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
